# warp-plugin

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/warp-cli/: Cargo.toml
crates/warp-cli/src/: build.rs  cli.rs
crates/warp-language-server/: Cargo.toml
crates/warp-plugin/: Cargo.toml  README.md  Scarb.toml
crates/warp-plugin/src/: all.rs  compiler.rs  db.rs  function_calls.rs  handling.rs  implicits.rs  kind.rs  lib.rs  plugin.rs  plugin_test.rs  utils.rs
crates/warp-plugin/src/cairo_level_tests/: cairo_project.toml  warp_memory.cairo
crates/warp-plugin/src/plugin_test_data/: nested_module  top_level
crates/warp-plugin/src/plugin_test_data/implicits/: calls  module  nested_module  warp_memory  warp_memory_accessor  warp_memory_basic
crates/warp-plugin/src/plugin_test_data/misc/: storage
crates/warp-plugin/src/plugin_test_data/warp_memory/: module  module_nested_calls  nested_module  top_level
examples/: Scarb.toml  helloworld.cairo
examples/src/: example_implicit.cairo  lib.cairo  warp.cairo
warplib/: Scarb.toml
warplib/src/: lib.cairo  memory.cairo
