[workspace]
members = [
    "crates/warp-plugin",
]
[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dojoengine/dojo/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.66"
cairo-felt = "0.1.1"
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-language-server = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", rev = "9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-vm = "0.1.2"
camino = { version = "1.1.2", features = ["serde1"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2"
env_logger = "0.9.3"
indoc = "1.0.7"
itertools = "0.10.3"
num-bigint = "0.4"
pretty_assertions = "1.2.1"
rayon = "0.9.0"
salsa = "0.16.1"
scarb = { git = "https://github.com/software-mansion/scarb.git", rev = "ccf26d0572c18d2d7416d5d48beaa64107d3a109" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
smol_str = "0.1.23"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "447182a90839a3e4f096a01afe75ef474186d911" }
thiserror = "1.0.32"
toml = "0.4.2"
test-log = "0.2.11"


# we need to specify the rev in the url to workaround this issue: https://stackoverflow.com/questions/72240671/patch-a-transient-git-dependency-to-a-specific-rev/72261235#72261235
# Patches used so to override the version of the cairo dependencies in scarb
[patch.crates-io]
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-eq-solver = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-proc-macros = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra-ap-change = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }

[patch.'https://github.com/starkware-libs/cairo.git']
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-eq-solver = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-proc-macros = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra-ap-change = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git?rev=9060a878de8af76e42161eca45fdb00c9d9a55cc" }