[workspace]
members = [
    "crates/warp-plugin",
    "crates/warp-cli",
]
[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nethermindeth/warp-plugin/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.66"
cairo-felt = "0.1.1"
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-language-server = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", version = "1.0.0-alpha.5", rev = "f3d940ace1a336f8714fcbf855874061a29ad009" }
cairo-vm = "0.1.2"
camino = { version = "1.1.2", features = ["serde1"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2"
env_logger = "0.9.3"
indoc = "1.0.7"
itertools = "0.10.3"
num-bigint = "0.4"
pretty_assertions = "1.2.1"
rayon = "0.9.0"
salsa = "0.16.1"
scarb = { git = "https://github.com/software-mansion/scarb.git", rev = "ec30b22e05f9572e0673f5a189bb835e89ee16f2" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
smol_str = "0.1.23"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "447182a90839a3e4f096a01afe75ef474186d911" }
thiserror = "1.0.32"
toml = "0.4.2"
test-log = "0.2.11"

[patch.crates-io]
scarb = { git = "https://github.com/enitrat/scarb.git", branch = "main" }

[patch.'https://github.com/software-mansion/scarb.git']
scarb = { git = "https://github.com/enitrat/scarb.git", branch = "main" }