[workspace]
members = [
  "crates/warp-plugin",
  "crates/warp-cli",
  "crates/warp-language-server",
]
[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nethermindeth/warp-plugin/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.71"
cairo-felt = "0.1.1"
cairo-lang-casm = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-debug = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-defs = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-diagnostics = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-language-server = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-lowering = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-parser = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-plugins = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-project = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-semantic = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-sierra-generator = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-syntax = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-compiler = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-filesystem = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-formatter = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-sierra-to-casm = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-starknet = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }
cairo-lang-utils = { version = "1.1.0", git = "https://github.com/starkware-libs/cairo.git", rev = "43b83560" }

cairo-vm = "0.1.2"
camino = { version = "1.1.2", features = ["serde1"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2"
env_logger = "0.9.3"
indoc = "1.0.7"
itertools = "0.10.3"
num-bigint = "0.4"
pretty_assertions = "1.2.1"
rayon = "0.9.0"
salsa = "0.16.1"
scarb = { git = "https://github.com/software-mansion/scarb.git", rev = "aa281bc" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.2.0", features = ["serde"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
thiserror = "1.0.32"
toml = "0.4.2"
test-log = "0.2.11"
