[package]
name = "warp-plugin"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-lowering.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-parser.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-utils.workspace = true
starknet.workspace = true
indoc.workspace = true
itertools.workspace = true
scarb.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
tracing = "0.1.37"
regex = "1.7.1"

[dev-dependencies]
env_logger.workspace = true
cairo-lang-formatter.workspace = true
cairo-lang-semantic = { version = "1.0.0-rc0", features = ["testing"] }
cairo-lang-test-utils = { version = "1.0.0-rc0" }
pretty_assertions.workspace = true
test-case = "2.2.2"
test-case-macros = "2.2.2"
test-log.workspace = true
